[tool.poetry]
name = "pymacc"
version = "0.1.0"
description = "Python MArkdown driven fastCgi Cms"
authors = ["matheusfillipe <matheusfillipeag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mistune = "2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
